integration_tests/tests/integration_tests/snapshots/integration_tests__search_assets__search_asset_with_token_type_regular_nft.snap
---
source: integration_tests/tests/integration_tests/search_assets.rs
expression: response
---
{
  "total": 2,
  "limit": 2,
  "page": 1,
  "items": [
    {
      "interface": "ProgrammableNFT",
      "id": "42AYryUGNmJMe9ycBXZekkYvdTehgbtECHs7SLu5JJTB",
      "content": {
        "$schema": "https://schema.metaplex.com/nft1.0.json",
        "json_uri": "https://cdn.hellomoon.io/public/silicons/metadata/2835.json",
        "files": [],
        "metadata": {
          "name": "SILICON #2835",
          "symbol": "SILI",
          "token_standard": "ProgrammableNonFungible"
        },
        "links": {}
      },
      "authorities": [
        {
          "address": "A2QW89tFNDkkdvJv671tdknAyA21u6hvS7HTUyeMWnf3",
          "scopes": [
            "full"
          ]
        }
      ],
      "compression": {
        "eligible": false,
        "compressed": false,
        "data_hash": "",
        "creator_hash": "",
        "asset_hash": "",
        "tree": "",
        "seq": 0,
        "leaf_id": 0
      },
      "grouping": [
        {
          "group_key": "collection",
          "group_value": "HS1oygRKNBG1nMqjSmaBXSQqQ7apWr14gUU4pW3aDMCP"
        }
      ],
      "royalty": {
        "royalty_model": "creators",
        "target": null,
        "percent": 0.05,
        "basis_points": 500,
        "primary_sale_happened": true,
        "locked": false
      },
      "creators": [
        {
          "address": "8X2e7Lf3wmA9RPHpPH73kmTqqHHyZE9BcED6Y6TWaZCx",
          "share": 0,
          "verified": true
        },
        {
          "address": "5bTgyaCCRNCem3DZXxdRREyesduc6adqwks8rRWGXx8D",
          "share": 100,
          "verified": false
        }
      ],
      "ownership": {
        "frozen": true,
        "delegated": true,
        "delegate": "D98f1ebFe6kfZTcztLo1iPeKAwogbWHAgXzgSpdRDiu7",
        "ownership_model": "single",
        "owner": "2oerfxddTpK5hWAmCMYB6fr9WvNrjEH54CHCWK8sAq7g"
      },
      "supply": {
        "print_max_supply": 0,
        "print_current_supply": 0,
        "edition_nonce": 255
      },
      "mutable": true,
      "burnt": false,
      "token_info": {
        "supply": 1,
        "decimals": 0,
        "token_program": "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA",
        "mint_authority": "EaFuF8KsiimmNVbMhAepSxiifKSBTM9dkjLzN2249Nd6",
        "freeze_authority": "EaFuF8KsiimmNVbMhAepSxiifKSBTM9dkjLzN2249Nd6",
        "balance": 1,
        "associated_token_address": "7oSzJpyztTuK124EyPAw2nbF4Vaj2P9MU9vww1QN1k8p"
      }
    },
    {
      "interface": "ProgrammableNFT",
      "id": "2w81QrLYTwSDkNwXgCqKAwrC1Tu6R9mh9BHcxys2Bup2",
      "content": {
        "$schema": "https://schema.metaplex.com/nft1.0.json",
        "json_uri": "https://cdn.hellomoon.io/public/silicons/metadata/4685.json",
        "files": [],
        "metadata": {
          "name": "SILICON #4685",
          "symbol": "SILI",
          "token_standard": "ProgrammableNonFungible"
        },
        "links": {}
      },
      "authorities": [
        {
          "address": "A2QW89tFNDkkdvJv671tdknAyA21u6hvS7HTUyeMWnf3",
          "scopes": [
            "full"
          ]
        }
      ],
      "compression": {
        "eligible": false,
        "compressed": false,
        "data_hash": "",
        "creator_hash": "",
        "asset_hash": "",
        "tree": "",
        "seq": 0,
        "leaf_id": 0
      },
      "grouping": [
        {
          "group_key": "collection",
          "group_value": "HS1oygRKNBG1nMqjSmaBXSQqQ7apWr14gUU4pW3aDMCP"
        }
      ],
      "royalty": {
        "royalty_model": "creators",
        "target": null,
        "percent": 0.05,
        "basis_points": 500,
        "primary_sale_happened": true,
        "locked": false
      },
      "creators": [
        {
          "address": "8X2e7Lf3wmA9RPHpPH73kmTqqHHyZE9BcED6Y6TWaZCx",
          "share": 0,
          "verified": true
        },
        {
          "address": "5bTgyaCCRNCem3DZXxdRREyesduc6adqwks8rRWGXx8D",
          "share": 100,
          "verified": false
        }
      ],
      "ownership": {
        "frozen": true,
        "delegated": true,
        "delegate": "D98f1ebFe6kfZTcztLo1iPeKAwogbWHAgXzgSpdRDiu7",
        "ownership_model": "single",
        "owner": "2oerfxddTpK5hWAmCMYB6fr9WvNrjEH54CHCWK8sAq7g"
      },
      "supply": {
        "print_max_supply": 0,
        "print_current_supply": 0,
        "edition_nonce": 255
      },
      "mutable": true,
      "burnt": false,
      "token_info": {
        "supply": 1,
        "decimals": 0,
        "token_program": "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA",
        "mint_authority": "5tuhRYWBVE6iXwUe2GAiDj7PupNpjGTXq1H28vtsLrik",
        "freeze_authority": "5tuhRYWBVE6iXwUe2GAiDj7PupNpjGTXq1H28vtsLrik",
        "balance": 1,
        "associated_token_address": "iRjBSW4tnw42qxf3tycTYKki1d4bcETt9AfjEwoHYgy"
      }
    }
  ]
}
